--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Norma Sim</title>
-    <script type="module" crossorigin src="/assets/index.a62688b0.js"></script>
-    <link rel="stylesheet" href="/assets/index.527e1230.css">
-  </head>
-  <body>
+    <title>{PlaceHolder}</title>
+  <script type="module" crossorigin src="/assets/index.d0efb164.js"></script>
+  <link rel="stylesheet" href="/assets/index.c0db17cc.css">
+</head>
+
+<body>
     <div id="app"></div>
     
-  </body>
+</body>
+
 </html>
